--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,9 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.5f1c1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Script\Lesson1\SingletonSystemDemo.cs" />
+     <Compile Include="Assets\Script\Lesson1\SingletonSystemLesson.cs" />
+     <Compile Include="Assets\Script\Lesson1\SingletonSystemLesson4.cs" />
      <Compile Include="Assets\Script\Lesson1\AssemblyManagerDemo.cs" />
      <Compile Include="Assets\Script\Lesson1\Main.cs" />
      <Compile Include="Assets\Script\Lesson1\IdFactoryDemo.cs" />
