--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Folder Include="Assets\Scenes" />
      <Folder Include="Assets\Script" />
      <Folder Include="Assets\Script\Lesson1" />
+     <None Include="Assets\FantasySettings.json" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.5f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
      </Reference>
