--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,16 +46,29 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\Lesson1\SingletonSystemDemo.cs" />
+     <Compile Include="Assets\Scripts\Generate\NetworkProtocol\OuterMessage.cs" />
      <Compile Include="Assets\Script\Lesson1\SingletonSystemLesson.cs" />
      <Compile Include="Assets\Script\Lesson1\SingletonSystemLesson4.cs" />
+     <Compile Include="Assets\ExportExcellLesson.cs" />
      <Compile Include="Assets\Script\Lesson1\AssemblyManagerDemo.cs" />
      <Compile Include="Assets\Script\Lesson1\Main.cs" />
+     <Compile Include="Assets\Scripts\Generate\NetworkProtocol\RouteType.cs" />
+     <Compile Include="Assets\Scripts\Generate\NetworkProtocol\OuterOpcode.cs" />
+     <Compile Include="Assets\Scripts\Generate\ConfigTable\Entity\ServerConfig.cs" />
      <Compile Include="Assets\Script\Lesson1\IdFactoryDemo.cs" />
      <Folder Include="Assets" />
+     <Folder Include="Assets\Scripts\Generate\CustomExport" />
      <Folder Include="Assets\Scenes" />
+     <Folder Include="Assets\Scripts\Generate" />
      <Folder Include="Assets\Script" />
+     <Folder Include="Assets\Bundles\Config" />
+     <Folder Include="Assets\Bundles" />
      <Folder Include="Assets\Script\Lesson1" />
+     <Folder Include="Assets\Scripts\Generate\NetworkProtocol" />
+     <Folder Include="Assets\Scripts" />
      <None Include="Assets\FantasySettings.json" />
+     <Folder Include="Assets\Scripts\Generate\ConfigTable\Entity" />
+     <Folder Include="Assets\Scripts\Generate\ConfigTable" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.5f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
      </Reference>
