--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Script\Lesson1\Main.cs" />
      <Compile Include="Assets\Scripts\Generate\NetworkProtocol\RouteType.cs" />
      <Compile Include="Assets\Scripts\Generate\NetworkProtocol\OuterOpcode.cs" />
+     <Compile Include="Assets\Script\事件\EventSysytmLesson.cs" />
      <Compile Include="Assets\Scripts\Generate\ConfigTable\Entity\ServerConfig.cs" />
      <Compile Include="Assets\Script\Lesson1\IdFactoryDemo.cs" />
      <Compile Include="Assets\Script\同步和异步\CoroutineLockLesson.cs" />
@@ -67,6 +68,7 @@
      <Folder Include="Assets\Bundles\Config" />
      <Folder Include="Assets\Bundles" />
      <Folder Include="Assets\Script\Lesson1" />
+     <Folder Include="Assets\Script\事件" />
      <Folder Include="Assets\Scripts\Generate\NetworkProtocol" />
      <Folder Include="Assets\Scripts" />
      <None Include="Assets\FantasySettings.json" />
