--- a/Fantasy_Package/Server/Fantasy_Server/Fantasy_Server/Fantasy_Server.csproj
+++ b/Fantasy_Package/Server/Fantasy_Server/Fantasy_Server/Fantasy_Server.csproj
@@ -22,6 +22,9 @@
       <None Update="FantasySettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
