--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,26 +68,147 @@
      <Compile Include="Assets\Script\Address\AddressLesson.cs" />
      <Compile Include="Assets\Script\RouteLesson\RouteMessage_Session.cs" />
      <Folder Include="Assets" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Tonemapper.shader" />
      <Folder Include="Assets\Script\Address" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\GlobalFog.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\VortexEffect.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\NoiseAndGrain.shader" />
+     <Folder Include="Assets\Model\Car\Animation" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\DLAA.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\frag_ao.cginc" />
      <Folder Include="Assets\Scripts\Generate\CustomExport" />
+     <Folder Include="Assets\Model\Controller_1\material" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAAPreset3.shader" />
      <Folder Include="Assets\Scripts\Handler" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\CameraMotionBlurDX11.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing" />
      <Folder Include="Assets\Scenes" />
      <Folder Include="Assets\Script\RouteLesson" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\VignettingShader.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionCurves.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\MultiPassHollywoodFlares.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\LensAberrations\Resources\LensAberrations.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\SSAOShader.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionCurvesSimple.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\Blend.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\SSAA.shader" />
+     <None Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders\CarPaintOpaqueSimplified.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\SunShaftsComposite.shader" />
      <Folder Include="Assets\Script\实体" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\LensFlare" />
+     <None Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders\CarPaintOpaque.shader" />
+     <Folder Include="Assets\Model\Car\Flares\Art Assets" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ConvertDepth.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\TwirlEffect.shader" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Prefabs" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\Apply.shader" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\Effects" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\Adaptation.shader" />
+     <Folder Include="Assets\Model\Controller_2\material01" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\LensFlareCreate.shader" />
+     <Folder Include="Assets\Model\Sewing" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\HDRIMaps" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\CameraMotionBlur.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ScreenSpaceAmbientObscurance.shader" />
      <Folder Include="Assets\Scripts\Generate" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\CreaseApply.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAA3Console.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionSelective.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\MotionBlurClear.shader" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\HDRIMaps\Outdoor" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading\Resources\TonemappingColorGrading.shader" />
      <Folder Include="Assets\Script\同步和异步" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\SepiaToneEffect.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrection3DLut.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\SimpleClear.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ContrastComposite.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\LensAberrations\Resources" />
      <Folder Include="Assets\Script" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\MinMaxReduction.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\BlurEffectConeTaps.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\Bokeh34.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionEffect.shader" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\CarPaintTextures" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\FisheyeShader.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading\Resources\TonemappingColorGrading.cginc" />
+     <None Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders\CarPaintTransparentSimplified.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
+     <Folder Include="Assets\Model\Car" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BrightPassFilter.shader" />
+     <Folder Include="Assets\Model\Controller_1\mat" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Textures\CarPaintTextures\CarDashboard" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\MobileBloom.shader" />
+     <Folder Include="Assets\Model\Controller_1\folder" />
+     <Folder Include="Assets\Model\Car\texture" />
      <Folder Include="Assets\Bundles\Config" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendForBloom.shader" />
+     <Folder Include="Assets\Model" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\DepthOfField34.shader" />
+     <Folder Include="Assets\Model\Car\Standard" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\DepthOfFieldDX11.shader" />
      <Folder Include="Assets\Bundles" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch" />
+     <Folder Include="Assets\Model\Controller_2\material" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\SeparableBlurPlus.shader" />
+     <Folder Include="Assets\Model\Controller_1\Animation" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\CarElementsMats" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\MotionBlur.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\SeparableBlur.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\MobileBlur.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BrightPassFilter2.shader" />
      <Folder Include="Assets\Script\Lesson1" />
+     <Folder Include="Assets\Model\Car\材质1" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading\Resources\HistogramRender.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\GrayscaleEffect.shader" />
+     <Folder Include="Assets\Model\Controller_2\Animation" />
      <Folder Include="Assets\Script\事件" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\ChromaticAberrationShader.shader" />
+     <Folder Include="Assets\Model\Controller_2" />
+     <Folder Include="Assets\Model\Car\材质2" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\NoiseAndGrainDX11.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Textures" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\SeparableWeightedBlurDof34.shader" />
+     <Folder Include="Assets\Model\Sewing\Model" />
+     <None Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders\U5_CarStandard.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders" />
+     <Folder Include="Assets\Model\Controller_1\texture" />
      <Folder Include="Assets\Scripts\Generate\NetworkProtocol" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\BlendModesOverlay.shader" />
+     <Folder Include="Assets\Model\Controller_1" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\DepthOfFieldScatter.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\EdgeDetectNormals.shader" />
      <Folder Include="Assets\Script\Session" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\NoiseEffectShaderRGB.shader" />
+     <Folder Include="Assets\Model\Sewing\Model\Materials" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\LensAberrations" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAA2.shader" />
      <Folder Include="Assets\Scripts\RouteHandle" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\NoiseEffectShaderYUV.shader" />
      <Folder Include="Assets\Scripts" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading\Resources\HistogramCompute.compute" />
+     <None Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite\Resources\Shaders\CarPaintTransparent.shader" />
      <None Include="Assets\FantasySettings.json" />
+     <Folder Include="Assets\Model\Car\Standard Assets\Effects\TonemappingColorGrading\Resources" />
      <Folder Include="Assets\Scripts\Generate\ConfigTable\Entity" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\Luminance.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlurAndFlares.shader" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\NFAA.shader" />
+     <Folder Include="Assets\Model\Car\Car Paint - beffio\__Car Paint Lite" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAAPreset2.shader" />
+     <Folder Include="Assets\Model\Sewing\Model\Textures" />
      <Folder Include="Assets\Scripts\Generate\ConfigTable" />
+     <None Include="Assets\Model\Car\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\TiltShiftHdrLensBlur.shader" />
+     <Folder Include="Assets\Model\Car\Standard Assets" />
+     <Folder Include="Assets\Model\Car\Flares" />
      <Reference Include="UnityEngine">
      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.5f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
      </Reference>
